--- a/views/blackjack.ejs
+++ b/views/blackjack.ejs
@@ -10,9 +10,9 @@
 	<script src="/socket.io/socket.io.js"></script>
 	<script src="phaser/phaser.js"></script>
 	<script src="phaser/phaser.min.js"></script>
-	<!--<script src="https://code.createjs.com/tweenjs-0.6.1.min.js"></script>-->
 	<script type="text/javascript">
 		var user = <%- JSON.stringify(user) %>;
+		var gameName = "blackjack"; //w angular do wyświetlania pokoi
 	</script>
 	<script src="javascript/blackjack.js"></script>
 	<script src="javascript/top-container.js"></script>
