zmiany wizualne, charades: ranking, strona register

--- a/public/stylesheets/charades.less
+++ b/public/stylesheets/charades.less
@@ -183,6 +183,11 @@ canvas {
 	border-radius: 5px;
 	//.bordered;
 
+	-webkit-user-select: none;
+     -moz-user-select: -moz-none;
+      -ms-user-select: none;
+          user-select: none;
+
 	#ranking {
 		//.bordered;
 		
