--- a/views/top-container.ejs
+++ b/views/top-container.ejs
@@ -1,6 +1,6 @@
 <div id="top-container">
 	<div id="website-name">
-		Pattern-Games
+		Pattern Games
 		</div>
     <div id="you-are-playing-as">
 		<div id="phrase">
