strategy pattern, decorator, observer, builder

--- a/public/stylesheets/charades.less
+++ b/public/stylesheets/charades.less
@@ -139,6 +139,10 @@ canvas {
 				margin: 0;
 				padding: 0;
 
+				.myMessage {
+					background-color: #334a55;
+				}
+
 				li {
 					//.bordered;
 				}
@@ -208,16 +212,16 @@ canvas {
 			border-bottom: 2px solid white;
 			margin-bottom: 5px;
 
-			.position {
-				//.bordered;
-			}
+			// .position {
+			// 	//.bordered;
+			// }
 
-			.name {
-				//.bordered;
-			}
-			.points {
-				//.bordered;
-			}
+			// .name {
+			// 	//.bordered;
+			// }
+			// .points {
+			// 	//.bordered;
+			// }
 		}
 
 		#ranking-table-content {
