--- a/public/stylesheets/homepage.less
+++ b/public/stylesheets/homepage.less
@@ -38,8 +38,8 @@ body {
 		background-image: url("img/blackjack_logo.png");
 	}
 
-	#charades {
-		background-image: url("img/charades_logo.png");
+	#pictionary {
+		background-image: url("img/pictionary_logo.png");
 	}
 
 	#hangman {
