--- a/views/pictionary.ejs
+++ b/views/pictionary.ejs
@@ -12,12 +12,12 @@
 	<script src="phaser/phaser.min.js"></script>
 	<script type="text/javascript">
 		var user = <%- JSON.stringify(user) %>;
-		var gameName = "charades"; //w angular do wyświetlania pokoi
+		var gameName = "pictionary"; //w angular do wyświetlania pokoi
 	</script>
-	<script src="javascript/charades.js"></script>
+	<script src="javascript/pictionary.js"></script>
 	<script src="javascript/top-container.js"></script>
 	<link rel="stylesheet" href="stylesheets/top-container.css">
-	<link rel="stylesheet" href="stylesheets/charades.css">
+	<link rel="stylesheet" href="stylesheets/pictionary.css">
 </head>
 <body>
 	<div ng-app="myApp">
