--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -31,8 +31,8 @@
                         <div id="blackjack" class="games">
                             <a href="/blackjack"></a>
                         </div>
-                        <div id="charades" class="games">
-                            <a href="/charades"></a>  
+                        <div id="pictionary" class="games">
+                            <a href="/pictionary"></a>  
                         </div>
                         <div id="hangman" class="games">
                             <a href="/hangman"></a> 
