--- a/views/top-container.ejs
+++ b/views/top-container.ejs
@@ -19,7 +19,8 @@
 					<div id="time" class="col-sm-6">
 						Time
 						<br/>
-						<%= Math.floor(user.overallTime/1000/60/60) %>h
+						<%= Math.floor(user.overallTime/1000/60/60) %>h 
+						<%= Math.floor((user.overallTime - Math.floor(user.overallTime/1000/60/60) * 1000 * 60 * 60)/1000/60) %>m
 					</div>
 				</div>
 			</div>
