title in different colors

--- a/views/top-container.ejs
+++ b/views/top-container.ejs
@@ -1,6 +1,11 @@
 <div id="top-container">
 	<div id="website-name">
-		Pattern Games
+		<!-- PATTERN GAMES -->
+			
+			<img id="titleblack" src="stylesheets/img/titleblack.png">
+			<img id="titleyellow" src="stylesheets/img/titleyellow.png">
+			<img id="titleblue" src="stylesheets/img/titleblue.png">
+			<img id="titlegray" src="stylesheets/img/titlegray.png">
 			<a href="/"></a>
 		</div>
     <div id="you-are-playing-as">
