--- a/public/stylesheets/blackjack.less
+++ b/public/stylesheets/blackjack.less
@@ -17,6 +17,21 @@ canvas {
 	margin : auto;
 }
 
+
+#titlegray {
+	display: none;
+}
+
+
+#roomname + .tooltip.left > .tooltip-arrow {
+    border-left: 5px solid #b30000;
+}
+
+#roomname + .tooltip > .tooltip-inner {
+	background-color: #b30000;
+}
+
+
 #rooms {
 	.bordered;
 	position: absolute;
