--- a/public/stylesheets/pictionary.less
+++ b/public/stylesheets/pictionary.less
@@ -14,6 +14,18 @@ canvas {
 	z-index: -1;
 }
 
+#titlegray {
+	display: none;
+}
+
+#roomname + .tooltip.left > .tooltip-arrow {
+    border-left: 5px solid #1d3643;
+}
+
+#roomname + .tooltip > .tooltip-inner {
+	background-color: #1d3643;
+}
+
 #rooms {
 	.bordered;
 	position: absolute;
