--- a/public/stylesheets/top-container.less
+++ b/public/stylesheets/top-container.less
@@ -1,3 +1,4 @@
+@import url('http://fonts.googleapis.com/css?family=Yantramanav');
 .bordered {
 	border: 1px solid;
 }
@@ -24,11 +25,30 @@ body {
 	#website-name {
 		//.bordered;
 		float: left;
-		width: 200px;
+		width: 700px;
 		height: 100%;
 		text-align: center;
-		margin-left: 100px;
+		margin-left: 5%;
 		line-height: 45px;
+
+		// font-family: 'Yantramanav';
+		// font-size: 75px;
+		// font-weight: bold;
+		// color: #333333;
+		// margin-top: 7px;
+
+		img {
+			position: absolute;
+			left: 7%;
+			height: 100%;
+
+			
+		}
+
+		#titleblack, #titleyellow, #titleblue  {
+			display: none;
+		}
+
 	}
 
 	#you-are-playing-as {
