title in different colors

--- a/views/blackjack.ejs
+++ b/views/blackjack.ejs
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<meta http-equiv="Content-type" content="text/html; charset=utf-8" />
+	<title>Pattern Games</title>
 	<script src="libraries/jquery-1.11.3.min.js"></script>
 
 	<link rel="stylesheet" href="libraries/bootstrap-3.3.5-dist/css/bootstrap.min.css">
