title in different colors

--- a/public/stylesheets/blackjack.less
+++ b/public/stylesheets/blackjack.less
@@ -18,8 +18,12 @@ canvas {
 }
 
 
-#titlegray {
-	display: none;
+#titlegray, #titleyellow, #titleblue  {
+	opacity: 0;
+}
+
+#titleblack {
+	opacity: 1;
 }
 
 
