--- a/public/stylesheets/homepage.less
+++ b/public/stylesheets/homepage.less
@@ -9,6 +9,14 @@ body {
     color: white;
 }
 
+// #website-name {
+// 	background-image: url("img/titlegray.png");
+// }
+
+#titleblack, #titleyellow, #titleblue  {
+	opacity: 0;
+}
+
 #centre-containter {
 	@backgroundSizeX: 500px;
 	position: absolute;
