--- a/public/stylesheets/pictionary.less
+++ b/public/stylesheets/pictionary.less
@@ -14,8 +14,12 @@ canvas {
 	z-index: -1;
 }
 
-#titlegray {
-	display: none;
+#titlegray, #titleyellow, #titleblack  {
+	opacity: 0;
+}
+
+#titleblue {
+	opacity: 1;
 }
 
 #roomname + .tooltip.left > .tooltip-arrow {
