--- a/public/stylesheets/register.less
+++ b/public/stylesheets/register.less
@@ -2,6 +2,10 @@
 	border: 1px solid white;
 }
 
+#titleblack, #titleyellow, #titleblue  {
+	opacity: 0;
+}
+
 #login-form {
 	//.bordered;
 	padding: 10px;
