--- a/public/stylesheets/top-container.less
+++ b/public/stylesheets/top-container.less
@@ -28,7 +28,7 @@ body {
 		width: 700px;
 		height: 100%;
 		text-align: center;
-		margin-left: 5%;
+		margin-left: 7%;
 		line-height: 45px;
 
 		// font-family: 'Yantramanav';
@@ -37,17 +37,25 @@ body {
 		// color: #333333;
 		// margin-top: 7px;
 
+		// -webkit-transition: background-image 0.5s ease-in-out; /* Safari */
+  //   	transition: background-image 0.5s ease-in-out;
+
+		
+		// background-size: auto 100%;
+		// background-repeat: no-repeat;
+
+
+	
 		img {
 			position: absolute;
 			left: 7%;
 			height: 100%;
 
-			
+			-webkit-transition: opacity 1s; /* Safari */
+    		transition: opacity 1s;
 		}
 
-		#titleblack, #titleyellow, #titleblue  {
-			display: none;
-		}
+		
 
 	}
 
