refaktoryzacja klienta - AngularJS

--- a/public/stylesheets/pictionary.less
+++ b/public/stylesheets/pictionary.less
@@ -8,7 +8,7 @@ body {
 }
 	
 canvas {
-	.bordered;
+	// .bordered;
 	position: absolute;
 	top: 0px;
 	z-index: -1;
@@ -89,7 +89,6 @@ canvas {
 	width: 600px;
 	margin-left: -300px;
 	text-align: center;
-	display: none;
 
 	button {
 		width: 40px;
@@ -137,7 +136,6 @@ canvas {
 	background-color: #1d3643;
 	color: white;
 	border-radius: 5px;
-	display: none;
 	//.bordered;
 
 	#chat {
@@ -191,7 +189,6 @@ canvas {
 			}
 		}
 	}
-
 }
 
 #right-container-ranking {
@@ -202,7 +199,6 @@ canvas {
 	background-color: #1d3643;
 	color: white;
 	border-radius: 5px;
-	display: none;
 	//.bordered;
 
 	-webkit-user-select: none;
