--- a/views/pictionary.ejs
+++ b/views/pictionary.ejs
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html ng-app="myApp">
 <head>
 	<meta http-equiv="Content-type" content="text/html; charset=utf-8" />
 	<title>Pattern Games</title>
@@ -8,6 +8,7 @@
 	<link rel="stylesheet" href="libraries/bootstrap-3.3.5-dist/css/bootstrap.min.css">
 	<script src="libraries/bootstrap-3.3.5-dist/js/bootstrap.min.js"></script>
 	<script src="libraries/angular-1.4.8/angular.min.js"></script>
+	<script src="libraries/angular-1.4.8/angular-route.js"></script>
 	<script src="/socket.io/socket.io.js"></script>
 	<script src="phaser/phaser.js"></script>
 	<script src="phaser/phaser.min.js"></script>
@@ -15,59 +16,53 @@
 		var user = <%- JSON.stringify(user) %>;
 		var gameName = "pictionary"; //w angular do wyświetlania pokoi
 	</script>
-	<script src="javascript/pictionary.js"></script>
+	<script src="javascript/pictionary-setup.js"></script>
 	<script src="javascript/top-container.js"></script>
 	<link rel="stylesheet" href="stylesheets/top-container.css">
 	<link rel="stylesheet" href="stylesheets/pictionary.css">
 </head>
 <body>
-	<div ng-app="myApp">
-		<%- include top-container.ejs %>
-		<%- include angular-rooms-controller.ejs %>
-	</div>
-	<div id="tool-belt">
-		<button id="white" type="button" class="btn btn-default color"></button>
-		<button id="yellow" type="button" class="btn btn-default color"></button>
-		<button id="red" type="button" class="btn btn-default color"></button>
-		<button id="blue" type="button" class="btn btn-default color"></button>
-		<button id="green" type="button" class="btn btn-default color"></button>
-		<button id="black" type="button" class="btn btn-default color"></button>
-		<span id="size-buttons">
-			<button id="1" type="button" class="btn btn-default size">1</button>
-			<button id="10" type="button" class="btn btn-default size">10</button>
-			<button id="30" type="button" class="btn btn-default size">30</button>
-		</span>
-	</div>
-	<div id="right-container">
-		<div id="chat">
-			<div id="output-chat">
-				<ul class="chat-list">
-				</ul>
-			</div>
-			<div id="input-chat" class="row">
-				<div id="message" class="col-sm-9">
-					<input type="text" class="form-control">
-				</div>
-				<div id="send-button" class="col-sm-3">
-					<button type="button" class="btn btn-primary">Send</button>
-				</div>
-			</div>
-		</div>
-	</div>
-	<div id="right-container-ranking">
-		<div id="ranking">
-			<div id="ranking-table-header" class="row">
-				<div class="position col-sm-1"></div>
-				<div class="name col-sm-6">Name</div>
-				<div class="points col-sm-3">Points</div>
-				<div class="points col-sm-1"></div>
-			</div>
-			<div id="ranking-table-content">
-				<ul>
-				</ul>
-			</div>
-		</div>
-	</div>
+	<%- include top-container.ejs %>
+	<div ng-view></div>
+
+	<script type="text/javascript">
+		var app = angular.module('myApp', ['ngRoute']);
+		app.config(function($routeProvider) {
+			$routeProvider
+				.when('/',
+					{
+						controller: 'roomsController',
+						templateUrl:'blackjack-rooms.ejs'
+					})
+				.when('/game',
+					{
+						controller: 'buttonsController',
+						templateUrl:'pictionary-game.ejs'
+					})
+				.otherwise({ redirectTo: '/' });
+		});
+		app.controller('buttonsController', ["$scope", "$http", function($scope, $http) {	
+			$scope.colorChange = function(color) {
+				player.pathProperties.color = (color == "yellow" ? 0xF7FF00 : 
+													(color == "blue" ? 0x0000FF : 
+														(color == "white" ? 0xFFFFFF : 
+															(color == "green" ? 0x00FF00 : 
+																(color == "red" ? 0xFF0000 : 0x000000)))));
+			}
+
+			$scope.sizeChange = function(size) {
+				player.pathProperties.size = size;
+			}
+
+			$scope.sendMessage = function() {
+				socket.emit('chat-message', {
+					sender: player.name,
+					content: $scope.message
+				});
+				$scope.message = "";
+			}
+		}]);
+	</script>
 	<script src="javascript/angular-controllers.js"></script>
 </body>
 </html>
