--- a/views/pictionary.ejs
+++ b/views/pictionary.ejs
@@ -32,7 +32,7 @@
 				.when('/',
 					{
 						controller: 'roomsController',
-						templateUrl:'blackjack-rooms.ejs'
+						templateUrl:'rooms.ejs'
 					})
 				.when('/game',
 					{
