--- a/views/login.ejs
+++ b/views/login.ejs
@@ -57,6 +57,6 @@
 <script type="text/javascript">
 	var app = angular.module('myApp', []);
 </script>
-<!-- <script src="javascript/angular-controllers.js"></script> -->
+<script src="javascript/angular-controllers.js"></script>
 </body>
 </html>
