--- a/views/pictionary.ejs
+++ b/views/pictionary.ejs
@@ -15,6 +15,7 @@
 	<script type="text/javascript">
 		var user = <%- JSON.stringify(user) %>;
 		var gameName = "pictionary"; //w angular do wyświetlania pokoi
+		var userAllowedToEnterGame = false;
 	</script>
 	<script src="javascript/pictionary-setup.js"></script>
 	<script src="javascript/top-container.js"></script>
