--- a/views/blackjack.ejs
+++ b/views/blackjack.ejs
@@ -15,6 +15,7 @@
 	<script type="text/javascript">
 		var user = <%- JSON.stringify(user) %>;
 		var gameName = "blackjack"; //w angular do wyświetlania pokoi
+		var userAllowedToEnterGame = false;
 	</script>
 	<script src="javascript/blackjack-setup.js"></script>
 	<script src="javascript/top-container.js"></script>
@@ -43,12 +44,10 @@
 		});
 		app.controller('buttonsController', ["$scope", "$http", function($scope, $http) {	
 			$scope.triggerActionButton = function(action) {
-				// alert(action);
 				socket.emit("actionButton", action);
 			}
 
 			$scope.triggerBetButton = function(bet) {
-				// alert(action);
 				socket.emit("betButton", bet);
 			}
 		}]);
