--- a/views/register.ejs
+++ b/views/register.ejs
@@ -66,7 +66,7 @@
 <script type="text/javascript">
 	var app = angular.module('myApp', []);
 </script>
-<!-- <script src="javascript/angular-controllers.js"></script> -->
+<script src="javascript/angular-controllers.js"></script>
 
 </body>
 </html>
