--- a/public/stylesheets/top-container.less
+++ b/public/stylesheets/top-container.less
@@ -138,7 +138,7 @@ body {
 	//.bordered;
 	position: absolute;
 	width: 270px;
-	height: 70%;
+	height: 500px;
 	top: 50%;
 	margin-top: -225px;
 	margin-left: -240px;
