--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html ng-app="myApp">
+<html>
 <head>
   <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
   <script src="libraries/jquery-1.11.3.min.js"></script>
@@ -62,11 +62,11 @@
   <%= message %>
 </div>
 <% } %>
-
+<!-- 
 <script type="text/javascript">
 	var app = angular.module('myApp', []);
 </script>
 <script src="javascript/angular-controllers.js"></script>
-
+ -->
 </body>
 </html>
