pictionary chat - highlighted messages, blackjack deck of cards image, top-container display issues solved

--- a/public/stylesheets/blackjack.less
+++ b/public/stylesheets/blackjack.less
@@ -12,9 +12,11 @@ canvas {
 	position: absolute;
 	top: 0px;
 	z-index: -1;
-	left: 0;
-	right: 0;
-	margin : auto;
+	// left: 0;
+	// right: 0;
+	// margin : auto;
+	left: 50%;
+	margin-left: -675px;
 }
 
 
