--- a/public/stylesheets/pictionary.less
+++ b/public/stylesheets/pictionary.less
@@ -155,7 +155,15 @@ canvas {
 				padding: 0;
 
 				.myMessage {
-					background-color: #334a55;
+					color: #CECECE;
+				}
+
+				.system-close {
+					color: #ffff33;
+				}
+
+				.system-win {
+					color: #51FF51;
 				}
 
 				li {
