--- a/public/stylesheets/top-container.less
+++ b/public/stylesheets/top-container.less
@@ -4,8 +4,8 @@
 }
 
 body {
-	-webkit-transition: background-color 1s; /* Safari */
-    transition: background-color 1s;
+	-webkit-transition: background-color 0.8s; /* Safari */
+    transition: background-color 0.8s;
     background-color: #333333;
     color: white;
 
@@ -17,8 +17,8 @@ body {
 	height: 50px;
 	width: 100%;
 
-	-webkit-transition: background-color 1s; /* Safari */
-    transition: background-color 1s;
+	-webkit-transition: background-color 0.8s; /* Safari */
+    transition: background-color 0.8s;
     background-color: #222222;
 
 	
@@ -28,31 +28,18 @@ body {
 		width: 700px;
 		height: 100%;
 		text-align: center;
-		margin-left: 7%;
+		// margin-left: 5%;
 		line-height: 45px;
-
-		// font-family: 'Yantramanav';
-		// font-size: 75px;
-		// font-weight: bold;
-		// color: #333333;
-		// margin-top: 7px;
-
-		// -webkit-transition: background-image 0.5s ease-in-out; /* Safari */
-  //   	transition: background-image 0.5s ease-in-out;
-
-		
-		// background-size: auto 100%;
-		// background-repeat: no-repeat;
-
-
+		// .bordered;
+		width: auto;
 	
 		img {
 			position: absolute;
-			left: 7%;
+			left: 5%;
 			height: 100%;
 
-			-webkit-transition: opacity 1s; /* Safari */
-    		transition: opacity 1s;
+			-webkit-transition: opacity 0.8s; /* Safari */
+    		transition: opacity 0.8s;
 		}
 
 		
@@ -60,13 +47,13 @@ body {
 	}
 
 	#you-are-playing-as {
-		//.bordered;
+		// .bordered;
 		float: right;
-		width: 400px;
+		width: 530px;
 		height: 50px;
 		text-align: center;
 		line-height: 45px;
-		margin-right: 150px;
+		// margin-right: 150px;
 
 		#phrase {
 			position: absolute;
@@ -74,8 +61,8 @@ body {
 	}
 
 	#login {
-		//.bordered;
-		width: 230px;
+		// .bordered;
+		// width: auto;
 		height: 100%;
 		float: left;
 		text-align: center;	
