pictionary chat - highlighted messages, blackjack deck of cards image, top-container display issues solved

--- a/public/blackjack-game.ejs
+++ b/public/blackjack-game.ejs
@@ -17,7 +17,7 @@
 	<button id="500" type="button" class="btn btn-default betButton" ng-click="triggerBetButton(500)">500</button> -->
 	<img id="red-chip" src="stylesheets/img/red.png" class="betButton" ng-click="triggerBetButton(5)">
 	<img id="green-chip" src="stylesheets/img/green.png" class="betButton" ng-click="triggerBetButton(25)">
-	<img id="blue-chip" src="stylesheets/img/blue.png" class="betButton" ng-click="triggerBetButton(50)">
+	<img id="blue-chip" src="stylesheets/img/blue2.png" class="betButton" ng-click="triggerBetButton(50)">
 	<img id="black-chip" src="stylesheets/img/black.png" class="betButton" ng-click="triggerBetButton(100)">
 	<img id="purple-chip" src="stylesheets/img/purple.png" class="betButton" ng-click="triggerBetButton(500)">
 </div>
