blackjack game scale test

--- a/public/stylesheets/blackjack.less
+++ b/public/stylesheets/blackjack.less
@@ -16,7 +16,9 @@ canvas {
 	// right: 0;
 	// margin : auto;
 	left: 50%;
-	margin-left: -675px;
+	// margin-left: -675px;
+	transform: translate(-50%, 0); /* Yep! */
+	// .bordered;
 }
 
 
@@ -108,7 +110,7 @@ canvas {
 
 .actionButtons {
 	position: absolute;
-	top: 610px;
+	bottom: 10px;
 	left: 50%;
 	margin-left: -170px;
 	display: none;
