pictionary game scale test

--- a/public/pictionary-game.ejs
+++ b/public/pictionary-game.ejs
@@ -43,6 +43,11 @@
 			</div>
 		</div>
 	</div>
+	<div id="chat-ranking-navigator" class="btn-group">
+		<button id="show-chat" type="button" class="btn btn-default">Chat</button>
+		<button id="show-ranking" type="button" class="btn btn-default">Ranking</button>
+	</div>
+
 
 
 <script type="text/javascript" src="javascript/pictionary.js"></script>
