--- a/hangman/hangman.less
+++ b/hangman/hangman.less
@@ -4,34 +4,14 @@
 
 body {
 	overflow: hidden;
-	background-color: #F8B346;
+	background-color: #4a87a8;
 }
 	
 canvas {
-	// .bordered;
+	.bordered;
 	position: absolute;
 	top: 0px;
 	z-index: -1;
-	// left: 50%;
-	// margin-left: -675px;
-	// transform: translate(-50%, 0);
-	// .bordered;
-}
-
-#titlegray, #titleblue, #titleblack  {
-	opacity: 0;
-}
-
-#titleyellow {
-	opacity: 1;
-}
-
-#roomname + .tooltip.left > .tooltip-arrow {
-    border-left: 5px solid #63471c;
-}
-
-#roomname + .tooltip > .tooltip-inner {
-	background-color: #63471c;
 }
 
 #rooms {
@@ -42,7 +22,7 @@ canvas {
 	margin-left: -200px;
 	top: 100px;
 	border-radius: 5px;
-	border-color: #63471c;
+	border-color: #1d3643;
 	border-width: 2px;
 	
 	#output-room {
@@ -87,9 +67,8 @@ canvas {
 
 
 #top-container, #left-container {
-	background-color: #63471c;
+	background-color: #1d3643;
 }
-
 
 .letterButtons{
 	position: absolute;
