hangman new animation

--- a/public/blackjack-game.ejs
+++ b/public/blackjack-game.ejs
@@ -1,14 +1,15 @@
 <div id="phaser"></div>
+
 <div class="btn-group actionButtons" >
 	<!-- <button id="hit" type="button" class="btn btn-success actionButton" ng-click="triggerActionButton('hit')">Hit</button>
 	<button id="stand" type="button" class="btn btn-success actionButton" ng-click="triggerActionButton('stand')">Stand</button>
 	<button id="double" type="button" class="btn btn-success actionButton" ng-click="triggerActionButton('double')">Double</button>
 	<button id="split" type="button" class="btn btn-success actionButton" ng-click="triggerActionButton('split')">Split</button> -->
-	<img src="stylesheets/img/hit.png" class="actionButton" ng-click="triggerActionButton('hit')">
-	<img src="stylesheets/img/stand.png" class="actionButton" ng-click="triggerActionButton('stand')">
-	<img src="stylesheets/img/double.png" class="actionButton" ng-click="triggerActionButton('double')">
-	<img src="stylesheets/img/split.png" class="actionButton" ng-click="triggerActionButton('split')">
-	<img src="stylesheets/img/insurence.png" class="actionButton" ng-click="triggerActionButton('insurence')">
+	<img src="stylesheets/img/hit.png" class="actionButton" ng-click="triggerActionButton('hit')" data-toggle="tooltip" data-placement="top" title="Hit">
+	<img src="stylesheets/img/stand.png" class="actionButton" ng-click="triggerActionButton('stand')" data-toggle="tooltip" data-placement="top" title="Stand">
+	<img src="stylesheets/img/double.png" class="actionButton" ng-click="triggerActionButton('double')" data-toggle="tooltip" data-placement="top" title="Double">
+	<img src="stylesheets/img/split.png" class="actionButton" ng-click="triggerActionButton('split')" data-toggle="tooltip" data-placement="top" title="Split">
+	<img src="stylesheets/img/insurence.png" class="actionButton" ng-click="triggerActionButton('insurence')" data-toggle="tooltip" data-placement="top" title="Insurence">
 </div>
 <div class="btn-group betButtons">
 	<!-- <button id="10" type="button" class="btn btn-default betButton" ng-click="triggerBetButton(10)">10</button>
