This is the end, my only friend, the end

--- a/public/stylesheets/hangman.less
+++ b/public/stylesheets/hangman.less
@@ -91,13 +91,14 @@ canvas {
 }
 
 
-.letterButtons{
+.letterButtons {
 	position: absolute;
 	bottom: 30px;
 	left: 50%;
 	width: 500px;
 	height: 150px;
-	transform: translate(-50%, 0); /* Yep! */
+	transform: translate(-50%, 0);
+	display: none;
 
 	.letterButton{
 		background-color: #1d3643;
@@ -145,6 +146,7 @@ canvas {
 		background-color: #1d3643;
 		color: white;
 		border-radius: 5px;
+		display: none;
 	
 
 	-webkit-user-select: none;
