friends list improvements

--- a/public/rooms.ejs
+++ b/public/rooms.ejs
@@ -2,6 +2,7 @@
 	$(document).ready(function() {
 		$('[data-toggle="tooltip"]').tooltip("show");
 	});
+	// alert("to tu!")
 </script>
 <div id="rooms">
 	<div id="output-room">
