--- a/public/stylesheets/top-container.less
+++ b/public/stylesheets/top-container.less
@@ -178,6 +178,23 @@ body {
 	} 
 }
 
+#scroll-screen {
+	position: absolute;
+	overflow-y: auto;
+	// background-color: red;
+	width: 100%;
+	height: 440px;
+}
+
+.return-message {
+	position: absolute;
+	width: 100%;
+	margin-top: 410px;
+	// margin-left: 30px;
+	height: 40px;
+	line-height: 10px;
+}
+
 .friends-list {
 	list-style-type: none;
 	padding: 0;
