--- a/public/stylesheets/blackjack.less
+++ b/public/stylesheets/blackjack.less
@@ -17,7 +17,7 @@ canvas {
 	// margin : auto;
 	left: 50%;
 	// margin-left: -675px;
-	transform: translate(-50%, 0); /* Yep! */
+	transform: translate(-50%, 0);
 	// .bordered;
 }
 
@@ -93,6 +93,18 @@ canvas {
 
 #top-container, #left-container {
 	background-color: #b30000;
+}
+
+#no-rooms {
+	position: absolute;
+	width: 100%;
+	// .bordered;
+	top: 50%;
+	transform: translate(0, -60px);
+	text-align: center;
+	font-weight: bold;
+	color: #b30000;
+	font-size: 120%;
 }
 
 
