--- a/public/stylesheets/pictionary.less
+++ b/public/stylesheets/pictionary.less
@@ -81,6 +81,20 @@ canvas {
 	float: right;
 }
 
+#no-rooms {
+	position: absolute;
+	width: 100%;
+	// .bordered;
+	top: 50%;
+	transform: translate(0, -60px);
+	text-align: center;
+	font-weight: bold;
+	color: #1d3643;
+	// opacity: 0.8;
+	font-size: 120%;
+}
+
+
 
 #tool-belt {
 	@media (min-width: 1300px) {
