--- a/views/pictionary.ejs
+++ b/views/pictionary.ejs
@@ -12,6 +12,7 @@
 	<script src="/socket.io/socket.io.js"></script>
 	<script src="phaser/phaser.js"></script>
 	<script src="phaser/phaser.min.js"></script>
+	<script src="javascript/observer.js"></script>
 	<script type="text/javascript">
 		var user = <%- JSON.stringify(user) %>;
 		var gameName = "pictionary"; //w angular do wyświetlania pokoi
