--- a/public/stylesheets/hangman.less
+++ b/public/stylesheets/hangman.less
@@ -85,6 +85,20 @@ canvas {
 	float: right;
 }
 
+#no-rooms {
+	position: absolute;
+	width: 100%;
+	// .bordered;
+	top: 50%;
+	transform: translate(0, -60px);
+	text-align: center;
+	font-weight: bold;
+	color: #63471c;
+	// opacity: 0.8;
+	font-size: 120%;
+}
+
+
 
 #top-container, #left-container {
 	background-color: #63471c;
