--- a/views/blackjack.ejs
+++ b/views/blackjack.ejs
@@ -12,6 +12,7 @@
 	<script src="/socket.io/socket.io.js"></script>
 	<script src="phaser/phaser.js"></script>
 	<script src="phaser/phaser.min.js"></script>
+	<script src="javascript/observer.js"></script>
 	<script type="text/javascript">
 		var user = <%- JSON.stringify(user) %>;
 		var gameName = "blackjack"; //w angular do wyświetlania pokoi
@@ -42,7 +43,7 @@
 					})
 				.otherwise({ redirectTo: '/' });
 		});
-		app.controller('buttonsController', ["$scope", "$http", function($scope, $http) {	
+		app.controller('buttonsController', ["$scope", "$http", function($scope, $http) {
 			$scope.triggerActionButton = function(action) {
 				socket.emit("actionButton", action);
 			}
