--- a/views/blackjack.ejs
+++ b/views/blackjack.ejs
@@ -2,6 +2,7 @@
 <html ng-app="myApp">
 <head>
 	<meta http-equiv="Content-type" content="text/html; charset=utf-8" />
+	<base href="/blackjack">
 	<title>Pattern Games</title>
 	<script src="libraries/jquery-1.11.3.min.js"></script>
 
@@ -29,9 +30,9 @@
 
 	<script type="text/javascript">
 		var app = angular.module('myApp', ['ngRoute']);
-		app.config(function($routeProvider) {
+		app.config(function($routeProvider, $locationProvider) {
 			$routeProvider
-				.when('/',
+				.when('/blackjack',
 					{
 						controller: 'roomsController',
 						templateUrl:'rooms.ejs'
@@ -42,6 +43,8 @@
 						templateUrl:'blackjack-game.ejs'
 					})
 				.otherwise({ redirectTo: '/' });
+
+				$locationProvider.html5Mode(true);
 		});
 		app.controller('buttonsController', ["$scope", "$http", function($scope, $http) {
 			$scope.triggerActionButton = function(action) {
