url changes - angular

--- a/views/blackjack.ejs
+++ b/views/blackjack.ejs
@@ -42,7 +42,7 @@
 						controller: 'buttonsController',
 						templateUrl:'blackjack-game.ejs'
 					})
-				.otherwise({ redirectTo: '/' });
+				.otherwise({ redirectTo: '/blackjack' });
 
 				$locationProvider.html5Mode(true);
 		});
