--- a/views/hangman.ejs
+++ b/views/hangman.ejs
@@ -42,7 +42,7 @@
 						controller: 'hangmanController',
 						templateUrl:'hangman-game.ejs'
 					})
-				.otherwise({ redirectTo: '/' });
+				.otherwise({ redirectTo: '/hangman' });
 
 				$locationProvider.html5Mode(true);
 		});
