--- a/views/pictionary.ejs
+++ b/views/pictionary.ejs
@@ -42,7 +42,7 @@
 						controller: 'buttonsController',
 						templateUrl:'pictionary-game.ejs'
 					})
-				.otherwise({ redirectTo: '/' });
+				.otherwise({ redirectTo: '/pictionary' });
 
 				$locationProvider.html5Mode(true);
 		});
