url changes - angular

--- a/public/rooms.ejs
+++ b/public/rooms.ejs
@@ -6,7 +6,7 @@
 		userAllowedToEnterGame = false;
 		$("#top-container").show();
 		socket.disconnect();
-		location.reload();
+		// location.reload();
 	}
 </script>
 <div id="rooms">
