--- a/views/blackjack.ejs
+++ b/views/blackjack.ejs
@@ -2,7 +2,7 @@
 <html ng-app="myApp">
 <head>
 	<meta http-equiv="Content-type" content="text/html; charset=utf-8" />
-	<base href="/blackjack">
+	<base href="/">
 	<title>Pattern Games</title>
 	<script src="libraries/jquery-1.11.3.min.js"></script>
 
